Integrated low BW partitioner into TG.  Set partition mode to 4 to use

--- a/plugin/tigergraph/comdetect/examples/comdetect/Makefile
+++ b/plugin/tigergraph/comdetect/examples/comdetect/Makefile
@@ -124,6 +124,7 @@ help:
 	@echo "                    1: Generate partitions from TigerGraph memory"
 	@echo "                    2: Generate partitions from .mtx file"
 	@echo "                    3: Generate partitions from TigerGraph using whole-graph technique (default)"
+	@echo "                    4: Generate partitions from TG's vertex IDs and low-bandwidth partitioner"
 	@echo "runMode           : 0: Skip both CPU and Alveo run (i.e. only run partition)"
 	@echo "                    1: Run only on CPU"
 	@echo "                    2: Run only on Alveo (default)"
