--- a/L2/nHop_2cu/conn_u50.cfg
+++ b/L2/nHop_2cu/conn_u50.cfg
@@ -1,5 +1,6 @@
 [connectivity]
-sp=nHop_kernel0.m_axi_gmem0:HBM[0:1]
+#kernel0
+sp=nHop_kernel0.m_axi_gmem0:HBM[0]
 
 sp=nHop_kernel0.m_axi_gmem1:HBM[2]
 sp=nHop_kernel0.m_axi_gmem3:HBM[4]
@@ -13,11 +14,15 @@ sp=nHop_kernel0.m_axi_gmem8:HBM[9]
 
 sp=nHop_kernel0.m_axi_gmem9:HBM[10]
 sp=nHop_kernel0.m_axi_gmem10:HBM[11]
+
 sp=nHop_kernel0.m_axi_gmem11:HBM[12:13]
-sp=nHop_kernel0.m_axi_gmem12:HBM[14]
+sp=nHop_kernel0.m_axi_gmem12:HBM[12:13]
 
+sp=nHop_kernel0.m_axi_gmem13:HBM[1]
+sp=nHop_kernel0.m_axi_gmem14:HBM[14]
 
-sp=nHop_kernel1.m_axi_gmem0:HBM[28:29]
+#kernel1
+sp=nHop_kernel1.m_axi_gmem0:HBM[28]
 
 sp=nHop_kernel1.m_axi_gmem1:HBM[27]
 sp=nHop_kernel1.m_axi_gmem3:HBM[25]
@@ -31,8 +36,11 @@ sp=nHop_kernel1.m_axi_gmem8:HBM[20]
 
 sp=nHop_kernel1.m_axi_gmem9:HBM[19]
 sp=nHop_kernel1.m_axi_gmem10:HBM[18]
-sp=nHop_kernel1.m_axi_gmem11:HBM[16:17]
-sp=nHop_kernel1.m_axi_gmem12:HBM[15]
 
+sp=nHop_kernel1.m_axi_gmem11:HBM[16:17]
+sp=nHop_kernel1.m_axi_gmem12:HBM[16:17]
+
+sp=nHop_kernel1.m_axi_gmem13:HBM[29]
+sp=nHop_kernel1.m_axi_gmem14:HBM[15]
 
 nk=nHop_kernel:2:nHop_kernel0.nHop_kernel1
