Fixed package name for MIS

--- a/plugin/tigergraph/mis/package/Makefile
+++ b/plugin/tigergraph/mis/package/Makefile
@@ -14,7 +14,7 @@
 #
 PKGDIR := PKG_Release
 RM := rm -rf
-PLUGIN := Tigergraph-3.x/fuzzymatch
+PLUGIN := Tigergraph-3.x/mis
 PROD_VERSION := $(strip $(shell cat ../staging/VERSION))
 
 OSDIST = $(shell lsb_release -si)
