--- a/fuzzymatch/Makefile
+++ b/fuzzymatch/Makefile
@@ -20,36 +20,6 @@
 #all: javaApi cppBuild javaTest stage
 #all: stage
 all: stage cppBuild pythonApi  
-help:
-	@echo "Makefile usages:"
-	@echo "  make run [runMode=0] [deviceNames=xilinx_u50_gen3x16_xdma_201920_3] [totalEntities=10000000]"
-	@echo "    Run standalone test with statically linked executable"
-	@echo ""
-	@echo "  Run options:"
-	@echo "  deviceNames  : Specify Alveo devices to use for computation"
-	@echo "                 Supported devices:"
-	@echo "                 xilinx_u50_gen3x16_xdma_201920_3 (default)"
-	@echo "                 xilinx_aws-vu9p-f1_shell-v04261818_201920_2"
-	@echo "  numEntities  : Number of entities to match (default=100)"
-	@echo "  runMode      : 0: Run on Alveo Only (default)"
-	@echo "                 1: Run on CPU Only"
-	@echo "                 2: Run on both Alveo and CPU"
-	@echo "  totalEntities: total number of entities to match against(default=10000000)"
-	@echo ""
-	@echo "  make all"
-	@echo "  Compile fuzzyMatch lib and generate staging area"
-	@echo "" 
-	@echo "  make dist"
-	@echo "  Generate product installation package (RPM or DEB) for the current OS and architecture"
-	@echo "" 
-	@echo "  make clean-dist"
-	@echo "  Clean build area for distribution packages"
-	@echo "" 
-	@echo "  make run-staging-cpp"
-	@echo "  Run the CPP example from the staging area"
-	@echo ""
-	@echo "  Common options"
-	@echo "  INC_ALL_XCLBINS: 1: Include all supported XCLBINs for staging (default). 0: Only incude target XCLBIN"
 
 SHELL := /bin/bash
 
@@ -74,6 +44,7 @@ GRAPH_ANALYTICS_DIR = ..
 BUILD_DIR = build
 # Product version
 PRODUCT_VER=$(strip $(shell cat VERSION))
+STANDALONE_NAME=fuzzymatch
 
 #######################################################################################################################
 #
@@ -558,23 +529,36 @@ $(STAGE_SUBDIRS):
 #
 
 OSDIST = $(shell lsb_release -si)
+OSVER = $(shell lsb_release -sr)
 DIST_TARGET =
+OSDISTLC =
 ifeq ($(OSDIST),Ubuntu)
-    DIST_TARGET = DEB
+    DIST_TARGET = deb
+	OSDISTLC = ubuntu
 else ifeq ($(OSDIST),CentOS)
-    DIST_TARGET = RPM
+    DIST_TARGET = rpm
+	OSDISTLC = centos
 endif
+
+ARCH = $(shell uname -p)
+CPACK_PACKAGE_FILE_NAME= xilinx-$(STANDALONE_NAME)-$(PRODUCT_VER)_$(OSVER)-$(ARCH).$(DIST_TARGET)
+DIST_INSTALL_DIR = $(GRAPH_ANALYTICS_DIR)/scripts/xilinx-tigergraph-install/$(OSDISTLC)-$(OSVER)/$(STANDALONE_NAME)/
 
 .PHONY: dist
 
 dist: stage
-	@cd package; \
-	if [ "$(DIST_TARGET)" == "" ]; then \
+	@if [ "$(DIST_TARGET)" == "" ]; then \
 	    echo "Packaging is supported for only Ubuntu and CentOS."; \
 	else \
 	    echo "Packaging $(DIST_TARGET) for $(OSDIST)"; \
-	    make ; \
+	    cd package; \
+		make ; \
+		cd - ; \
+		cp ./package/$(CPACK_PACKAGE_FILE_NAME) $(DIST_INSTALL_DIR); \
+		echo "INFO: $(CPACK_PACKAGE_FILE_NAME) saved to $(DIST_INSTALL_DIR)"; \
 	fi
+	
+
 
 #######################################################################################################################
 #
@@ -612,3 +596,34 @@ cleanpy:
 
 cleanall: clean cleanpy
 	rm -rf ./package/*.deb ./package/*.rpm ./package/_CPack_Packages
+
+help:
+	@echo "Makefile usages:"
+	@echo "  make run [runMode=0] [deviceNames=xilinx_u50_gen3x16_xdma_201920_3] [totalEntities=10000000]"
+	@echo "    Run standalone test with statically linked executable"
+	@echo ""
+	@echo "  Run options:"
+	@echo "  deviceNames  : Specify Alveo devices to use for computation"
+	@echo "                 Supported devices:"
+	@echo "                 xilinx_u50_gen3x16_xdma_201920_3 (default)"
+	@echo "                 xilinx_aws-vu9p-f1_shell-v04261818_201920_2"
+	@echo "  numEntities  : Number of entities to match (default=100)"
+	@echo "  runMode      : 0: Run on Alveo Only (default)"
+	@echo "                 1: Run on CPU Only"
+	@echo "                 2: Run on both Alveo and CPU"
+	@echo "  totalEntities: total number of entities to match against(default=10000000)"
+	@echo ""
+	@echo "  make all"
+	@echo "  Compile fuzzyMatch lib and generate staging area"
+	@echo "" 
+	@echo "  make dist"
+	@echo "  Generate product installation package (RPM or DEB) for the current OS and architecture"
+	@echo "" 
+	@echo "  make clean-dist"
+	@echo "  Clean build area for distribution packages"
+	@echo "" 
+	@echo "  make run-staging-cpp"
+	@echo "  Run the CPP example from the staging area"
+	@echo ""
+	@echo "  Common options"
+	@echo "  INC_ALL_XCLBINS: 1: Include all supported XCLBINs for staging (default). 0: Only incude target XCLBIN"
