fuzzy match u55c integration and default id idx updated

--- a/fuzzymatch/Makefile
+++ b/fuzzymatch/Makefile
@@ -207,6 +207,17 @@ XCLBIN_FILE_F1 = $(L2_BUILD_DIR_F1)/$(XCLBIN_NAME_F1)
 XCLBIN_INSTALLED_NAME_F1 = $(XCLBIN_NAME_F1)
 XCLBIN_INSTALLED_F1 =/opt/xilinx/apps/graphanalytics/fuzzymatch/$(PRODUCT_VER)/xclbin/$(XCLBIN_INSTALLED_NAME_F1)
 
+
+#U55C
+L2_TOP_DIR_U55C = $(GRAPH_ANALYTICS_DIR)/L2/fuzzy_kernel
+L2_XDEVICE_U55C = xilinx_u55c_gen3x16_xdma_2_202110_1
+L2_BUILD_DIR_U55C = $(L2_TOP_DIR_U55C)/build_dir.hw.$(L2_XDEVICE_U55C)
+XCLBIN_NAME_U55C = fuzzy_kernel.xclbin
+XCLBIN_FILE_U55C = $(L2_BUILD_DIR_U55C)/$(XCLBIN_NAME_U55C)
+XCLBIN_INSTALLED_NAME_U55C = fuzzy_xilinx_u55c_gen3x16_xdma_2_202110_1.xclbin
+XCLBIN_INSTALLED_U55C =/opt/xilinx/apps/graphanalytics/fuzzymatch/$(PRODUCT_VER)/xclbin/$(XCLBIN_INSTALLED_NAME_U55C)
+
+
 .PHONY: xclbin
 
 xclbin:
@@ -238,6 +249,19 @@ $(XCLBIN_FILE_F1):
 	    echo "2. Do 'make xclbin' and go for a very long coffee break.  (Recommended for build automation)"; \
 	    false; \
 	fi
+
+$(XCLBIN_FILE_U55C):
+	@if [ -r $(XCLBIN_INSTALLED_U55C) ]; then \
+	    echo "INFO: The XCLBIN file $(XCLBIN_FILE_U55C) is missing.  Copying from installed area."; \
+	    cp -r $(XCLBIN_INSTALLED_U55C) $@; \
+	else \
+	    echo "INFO: The XCLBIN file $(XCLBIN_FILE_U55C) is missing."; \
+	    echo "Because building an XCLBIN file can be an all-day proposition, you have two choices for completing this build:"; \
+	    echo "1. Copy a pre-built XCLBIN to the target location above.  (Recommended for developers)"; \
+	    echo "2. Do 'make xclbin' and go for a very long coffee break.  (Recommended for build automation)"; \
+    	false; \
+	fi
+
 #######################################################################################################################
 #
 # python API wrapper
@@ -359,7 +383,9 @@ deviceNames=xilinx_u50_gen3x16_xdma_201920_3
 ifeq ($(deviceNames),xilinx_u50_gen3x16_xdma_201920_3)
     XCLBIN_RUN = $(CURDIR)/staging/xclbin/$(XCLBIN_INSTALLED_NAME_U50)
 else ifeq ($(deviceNames),xilinx_aws-vu9p-f1_shell-v04261818_201920_2)
-    XCLBIN_RUN = $(CURDIR)/staging/xclbin/$(XCLBIN_INSTALLED_NAME_F1)	
+    XCLBIN_RUN = $(CURDIR)/staging/xclbin/$(XCLBIN_INSTALLED_NAME_F1)
+else ifeq ($(deviceNames),xilinx_u55c_gen3x16_xdma_base_2)
+    XCLBIN_RUN = $(CURDIR)/staging/xclbin/$(XCLBIN_INSTALLED_NAME_U55C)		
 endif
 
 runMode = 0
@@ -487,12 +513,19 @@ STAGE_XCLBIN_NAME_U50 = $(XCLBIN_INSTALLED_NAME_U50)
 STAGE_XCLBIN_FILE_U50 = $(STAGE_DIR)/xclbin/$(STAGE_XCLBIN_NAME_U50)
 STAGE_XCLBIN_NAME_F1 = $(XCLBIN_INSTALLED_NAME_F1)
 STAGE_XCLBIN_FILE_F1 = $(STAGE_DIR)/xclbin/$(STAGE_XCLBIN_NAME_F1)
+STAGE_XCLBIN_NAME_U55C = $(XCLBIN_INSTALLED_NAME_U55C)
+STAGE_XCLBIN_FILE_U55C = $(STAGE_DIR)/xclbin/$(STAGE_XCLBIN_NAME_U55C)
 
 $(STAGE_XCLBIN_FILE_U50): $(XCLBIN_FILE_U50)
 	cp -f $^ $@
 
 $(STAGE_XCLBIN_FILE_F1): $(XCLBIN_FILE_F1)
 	cp -f $^ $@
+
+
+$(STAGE_XCLBIN_FILE_U55C): $(XCLBIN_FILE_U55C)
+	cp -f $^ $@
+
 
 STAGE_XILINX_APPS_COMMON = $(STAGE_DIR)/include/xilinx_apps_common.hpp
 XILINX_APPS_COMMON = $(GRAPH_ANALYTICS_DIR)/ext/xilinx_apps_common.hpp
@@ -511,11 +544,13 @@ STAGE_ALL_FILES = \
 
 # Conditionally add XCLBIN files
 ifeq ($(INC_ALL_XCLBINS),1) 
-	STAGE_ALL_FILES += $(STAGE_XCLBIN_FILE_U50) $(STAGE_XCLBIN_FILE_F1)
+	STAGE_ALL_FILES += $(STAGE_XCLBIN_FILE_U50) $(STAGE_XCLBIN_FILE_F1) $(STAGE_XCLBIN_FILE_U55C)
 else ifeq ($(deviceNames),xilinx_u50_gen3x16_xdma_201920_3)
     STAGE_ALL_FILES += $(STAGE_XCLBIN_FILE_U50)
 else ifeq ($(deviceNames),xilinx_aws-vu9p-f1_shell-v04261818_201920_2)
     STAGE_ALL_FILES += $(STAGE_XCLBIN_FILE_F1)
+else ifeq ($(deviceNames),xilinx_u55c_gen3x16_xdma_2_202110_1)
+    STAGE_ALL_FILES += $(STAGE_XCLBIN_FILE_U55C)
 endif
 
 
@@ -613,6 +648,7 @@ help:
 	@echo "                 Supported devices:"
 	@echo "                 xilinx_u50_gen3x16_xdma_201920_3 (default)"
 	@echo "                 xilinx_aws-vu9p-f1_shell-v04261818_201920_2"
+	@echo "                 xilinx_u55c_gen3x16_xdma_base_2"
 	@echo "  patternFile  :  Pattern file to match against (default=./examples/data/ref-names.csv)"
 	@echo "  patternIndex :  The column index to extract field of interest from the pattern file (default=1)"
 	@echo "  inputFile    :  Input file that needs to be matched against patternFile (default=./examples/data/new-names.csv)"
